// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Size container renders correctly with height unit aspect ratio 1:1 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "100%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit aspect ratio 3:2 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "66.66666666666666%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit aspect ratio 4:3 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "75%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit aspect ratio 16:9 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit aspect ratio 21:9 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "42.857142857142854%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit percentage of parent 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "height": "25%",
      "paddingTop": 0,
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit percentage of width 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": "25%",
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with height unit pixels 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": 25,
      "width": "100%",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with pixel width & height unit aspect ratio 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": 42.857142857142854,
      "width": "100px",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;

exports[`Size container renders correctly with pixel width & height unit percentage of width 1`] = `
<div
  className="class-name size-box"
  style={
    Object {
      "backgroundColor": "aqua",
      "paddingTop": 25,
      "width": "100px",
    }
  }
  tabIndex={1}
>
  <div
    className="size-box-inner class-name-inner"
  >
    <span>
      Child
    </span>
  </div>
</div>
`;
